--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "addremovexrefsource": "node --no-warnings -e \"require('spec-up-t/src/add-remove-xref-source.js')\"",
     "configure": "node --no-warnings -e \"require('spec-up-t/src/configure.js')\"",
     "custom-update": "npm update && node -e \"require('spec-up-t/src/install-from-boilerplate/custom-update.js')\""
+  },
+  "devDependencies": {
+    "electron": "^34.2.0"
   }
 }
