--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Quick setup for a specification with the Spec-Up-T tool.",
   "main": "main.js",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "spec-up-t": "^1.1.0"
   },
