npm install electron-builder --save-dev

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build": "npm run build"
   },
   "devDependencies": {
-    "electron": "^34.2.0"
+    "electron": "^34.2.0",
+    "electron-builder": "^25.1.8"
   }
 }
