--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "build": "electron-builder"
   },
   "devDependencies": {
-    "electron": "^34.2.0",
-    "electron-builder": "^23.0.0"
+    "electron": "^34.2.0"
   },
   "build": {
     "appId": "com.example.specuptstarterpack",
