--- a/package.json
+++ b/package.json
@@ -24,33 +24,24 @@
     "configure": "node --no-warnings -e \"require('spec-up-t/src/configure.js')\"",
     "custom-update": "npm update && node -e \"require('spec-up-t/src/install-from-boilerplate/custom-update.js')\"",
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "pkg ."
   },
   "devDependencies": {
     "electron": "^34.2.0",
-    "pkg": "^5.8.1"
+    "pkg": "^5.3.3"
   },
-  "build": {
-    "appId": "com.example.specuptstarterpack",
-    "productName": "Spec-Up-T Starterpack",
-    "directories": {
-      "output": "dist"
-    },
-    "files": [
+  "pkg": {
+    "scripts": "main.js",
+    "assets": [
       "index.html",
-      "main.js",
       "preload.js",
-      "package.json",
       "node_modules/**/*"
     ],
-    "win": {
-      "target": "nsis"
-    },
-    "mac": {
-      "target": "dmg"
-    },
-    "linux": {
-      "target": "AppImage"
-    }
+    "targets": [
+      "node16-macos-arm64",
+      "node16-linux-arm64",
+      "node16-win-arm64"
+    ],
+    "outputPath": "dist"
   }
 }
