--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "main.js",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chokidar": "^4.0.3",
     "dotenv": "^16.4.5",
     "spec-up-t": "^1.1.0"
   },
